--- a/info/templates/info/intro.html
+++ b/info/templates/info/intro.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bootstrap In Practice - Landing Page Example</title>
+    <title>Hostel Management System</title>
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap -->
@@ -15,7 +15,7 @@
 
         /* http://css-tricks.com/perfect-full-page-background-image/ */
         html {
-            background: url('images/header.jpg') no-repeat center center fixed; 
+            background: url('http://css-tricks.com/perfect-full-page-background-image') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
